--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-  font-weight: normal;
+body {
+  font-family: "DM Sans", sans-serif;
 }
 
 .header {
@@ -10,7 +7,9 @@
   padding: 38px 0 48px;
 }
 
-.header-flex, .footer-flex, .about{
+.header-flex,
+.footer-flex,
+.about {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -62,7 +61,7 @@
   transition: 500ms;
 }
 
-.about{
+.about {
   margin: 105px auto 85px;
 }
 
@@ -91,13 +90,13 @@
 }
 
 .button-transparent {
-    background: none;
-    color: #5454D4;
-    border: 1px solid #5454D4;
-    margin-left: 35px;
+  background: none;
+  color: #5454d4;
+  border: 1px solid #5454d4;
+  margin-left: 35px;
 }
 
 .footer {
-    background: rgba(255, 113, 67, 0.27);
-    padding: 55px 185px;
+  background: rgba(255, 113, 67, 0.27);
+  padding: 55px 185px;
 }
